--- a/index.html
+++ b/index.html
@@ -3,9 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Personal Portfolio Website Using HTML & CSS</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Kalam:wght@700&family=Poppins:ital,wght@1,600&display=swap" rel="stylesheet">
 </head>
 <body>
-    <p>Ganesh shinde portfolioooooooooooooooooooooooooooo</p>
+    <header>
+        <nav>
+            <div class="logp">GANESH's Portfolio</div>
+            <div class="class">
+                <a href="#">Home</a>
+                <a href="#">About</a>
+                <a href="#">Education</a>
+                <a href="#">Experiance</a>
+                <a href="#">Conatct Me</a>
+            </div>
+        </nav>
+    </header>
 </body>
 </html>
