--- a/index.html
+++ b/index.html
@@ -3,27 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Portfolio Website Using HTML & CSS</title>
+    <title>Ganesh's Portfolio Website</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,600&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Kalam:wght@700&family=Poppins:ital,wght@1,600&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
+    <div class="hero">
         <nav>
-            <div class="logp">GANESH's Portfolio</div>
-            <div class="class">
-                <a href="#">Home</a>
-                <a href="#">About</a>
-                <a href="#">Education</a>
-                <a href="#">Experiance</a>
-                <a href="#">Conatct Me</a>
-            </div>
-        </nav>
-    </header>
+            <img src="logo2.webp" class="logo">
+            <ul>
+                <li><a href="#">HOME</a></li>
+                <li><a href="#">MY SKILLS</a></li>
+                <li><a href="#">EDUCATION</a></li>
+                <li><a href="#">ABOUT ME</a></li>
+                <li><a href="#">CONTACT US</a></li>
+            </ul>
+        </nav> 
+        <div class="detail">
+            <h1>I,m Ganesh <span>Shinde</span></h1>
+            <p>This is my official portfolio website to show all
+                <br> Details and work experiance of My Web Devlopment
+            </p>
+           <a href="resume.jpg">Download CV</a> 
+        </div>
+        <div class="images">
+            <img src="shappe (1).png" class="shape">
+            <img src="myphoto (1).png" class="photo">
+        </div>
+    </div>
 </body>
 </html>
